# Image_processing

./: CMakeLists.txt  Image.h  README.md  export.txt  greyscale.txt  imageaos.cpp  imagesoa.cpp  imgsoa.cpp  progargs.cpp  pruebas.cpp
Google_tests/: CMakeLists.txt  tests.cpp
Google_tests/expected/histo/: amphora.hst  car.hst  elephant.hst  snake.hst
aos/: Image_aos.h  imageaos.cpp  imgaos.cpp  pruebas_aos.cpp
common/: common.h  progargs.cpp
out_path/: histo_landscape.hst
soa/: Image_soa.h  imagesoa.cpp  imgsoa.cpp
tests/: CMakeLists.txt  tests.cpp
tests/expected/histo/: balloon.hst  landscape.hst  plane.hst  pyramid.hst
tests/output_soa/: histo_amphora.hst  histo_balloon.hst  histo_bmp_24.hst  histo_car.hst  histo_elephant.hst  histo_greenland_grid_velo.hst  histo_plane.hst  histo_pyramid.hst  histo_snake.hst
