cmake_minimum_required(VERSION 3.23)
project(ARCOS-proyecto1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic -errors)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")
add_library(common progargs.cpp)
add_library(aos imageaos.cpp)
add_library(soa imagesoa.cpp pruebas.cpp)
add_executable(image-aos imageaos.cpp)
add_executable(image-soa imagesoa.cpp)
target_link_libraries (image-aos common aos)
target_link_libraries (image-soa common soa)