cmake_minimum_required(VERSION 3.23)
project(ARCOS-proyecto1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic -errors)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")
add_library(common common/progargs.cpp common/common.h)
add_library(aos aos/imageaos.cpp aos/imgaos.cpp aos/Image_aos.h)
add_library(soa soa/imagesoa.cpp soa/imgsoa.cpp soa/Image_soa.h)
add_executable(image-aos aos/imgaos.cpp)
add_executable(image-soa soa/imgsoa.cpp)
target_link_libraries (image-aos common aos)
target_link_libraries (image-soa common soa)
add_subdirectory(Google_tests)